@@ -5,11 +5,11 @@ def buildName = "${env.JOB_BASE_NAME.replaceAll("%2F", "-").replaceAll("\\.", "-
 
 pipeline {
     agent {
-      kubernetes {
-        cloud 'zeebe-ci'
-        label "zeebe-ci-release_${buildName}"
-        defaultContainer 'jnlp'
-        yaml '''\
+        kubernetes {
+            cloud 'zeebe-ci'
+            label "zeebe-ci-release_${buildName}"
+            defaultContainer 'jnlp'
+            yaml '''\
 metadata:
   labels:
     agent: zeebe-ci-build
@@ -22,7 +22,7 @@ spec:
       effect: "NoSchedule"
   containers:
     - name: maven
-      image: maven:3.6.0-jdk-8
+      image: maven:3.6.0-jdk-11
       command: ["cat"]
       tty: true
       env:
@@ -32,8 +32,7 @@ spec:
               resource: limits.cpu
         - name: JAVA_TOOL_OPTIONS
           value: |
-            -XX:+UnlockExperimentalVMOptions
-            -XX:+UseCGroupMemoryLimitForHeap
+            -XX:+UseContainerSupport
       resources:
         limits:
           cpu: 2
@@ -53,23 +52,23 @@ spec:
           cpu: 2
           memory: 1Gi
 '''
-      }
+        }
     }
 
     environment {
-      NEXUS = credentials('camunda-nexus')
-      MAVEN_CENTRAL = credentials('maven_central_deployment_credentials')
-      GPG_PASS = credentials('password_maven_central_gpg_signing_key')
-      GPG_PUB_KEY = credentials('maven_central_gpg_signing_key_pub')
-      GPG_SEC_KEY = credentials('maven_central_gpg_signing_key_sec')
-      GITHUB_TOKEN = credentials('camunda-jenkins-github')
-      RELEASE_VERSION = "${params.RELEASE_VERSION}"
-      RELEASE_BRANCH = "release-${params.RELEASE_VERSION}"
-      DEVELOPMENT_VERSION = "${params.DEVELOPMENT_VERSION}"
-      PUSH_CHANGES = "${params.PUSH_CHANGES}"
-      PUSH_DOCKER = "${params.PUSH_DOCKER}"
-      PUSH_DOCS = "${params.PUSH_DOCS}"
-      SKIP_DEPLOY = "${!params.PUSH_CHANGES}"
+        NEXUS = credentials('camunda-nexus')
+        MAVEN_CENTRAL = credentials('maven_central_deployment_credentials')
+        GPG_PASS = credentials('password_maven_central_gpg_signing_key')
+        GPG_PUB_KEY = credentials('maven_central_gpg_signing_key_pub')
+        GPG_SEC_KEY = credentials('maven_central_gpg_signing_key_sec')
+        GITHUB_TOKEN = credentials('camunda-jenkins-github')
+        RELEASE_VERSION = "${params.RELEASE_VERSION}"
+        RELEASE_BRANCH = "release-${params.RELEASE_VERSION}"
+        DEVELOPMENT_VERSION = "${params.DEVELOPMENT_VERSION}"
+        PUSH_CHANGES = "${params.PUSH_CHANGES}"
+        PUSH_DOCKER = "${params.PUSH_DOCKER}"
+        PUSH_DOCS = "${params.PUSH_DOCS}"
+        SKIP_DEPLOY = "${!params.PUSH_CHANGES}"
     }
 
     options {
@@ -83,9 +82,9 @@ spec:
         stage('Prepare') {
             steps {
                 git url: 'git@github.com:zeebe-io/zeebe',
-                    branch: "${env.RELEASE_BRANCH}",
-                    credentialsId: 'camunda-jenkins-github-ssh',
-                    poll: false
+                        branch: "${env.RELEASE_BRANCH}",
+                        credentialsId: 'camunda-jenkins-github-ssh',
+                        poll: false
 
                 container('maven') {
                     sh '.ci/scripts/release/prepare.sh'
@@ -128,9 +127,9 @@ spec:
             when { expression { return params.PUSH_DOCKER } }
             steps {
                 build job: 'zeebe-docker', parameters: [
-                    string(name: 'BRANCH', value: env.RELEASE_BRANCH),
-                    string(name: 'VERSION', value: params.RELEASE_VERSION),
-                    booleanParam(name: 'IS_LATEST', value: params.IS_LATEST)
+                        string(name: 'BRANCH', value: env.RELEASE_BRANCH),
+                        string(name: 'VERSION', value: params.RELEASE_VERSION),
+                        booleanParam(name: 'IS_LATEST', value: params.IS_LATEST)
                 ]
             }
         }
@@ -139,8 +138,8 @@ spec:
             when { expression { return params.PUSH_DOCS } }
             steps {
                 build job: 'zeebe-docs', parameters: [
-                    string(name: 'BRANCH', value: env.RELEASE_BRANCH),
-                    booleanParam(name: 'LIVE', value: true)
+                        string(name: 'BRANCH', value: env.RELEASE_BRANCH),
+                        booleanParam(name: 'LIVE', value: true)
                 ]
             }
         }
